<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoRecord</string>
    <string name="hello_world">Hello world!</string>

    <!-- Record -->
    <string name="hint_position_front">前</string>
    <string name="hint_position_back">后</string>
    <string name="hint_video_lock">录像加锁</string>
    <string name="hint_video_unlock">录像解锁</string>
    <string name="hint_video_size_720">分辨率七二零P</string>
    <string name="hint_video_size_1080">分辨率一零八零P</string>
    <string name="hint_video_time_5">视频分段五分钟</string>
    <string name="hint_video_time_3">视频分段三分钟</string>
    <string name="hint_video_time_1">视频分段一分钟</string>
    <string name="hint_video_mute_off">录音</string>
    <string name="hint_video_mute_on">静音</string>
    <string name="hint_start_park_monitor_after_90">九十秒后启动停车守卫</string>
    <string name="hint_stop_record_power_unconnect">电源断开，停止录像</string>
    <string name="hint_device_going_sleep">进入休眠</string>
    <string name="hint_stop_record_sleeping">正在休眠</string>
    <string name="hint_sd_record_not_exist">录像卡不存在</string>
    <string name="hint_sd_remove_badly">卸载存储卡，停止录像</string>
    <string name="hint_sd2_format">格式化存储卡，停止录像</string>
    <string name="hint_photo_save">照片已保存</string>
    <string name="hint_storage_full_and_delete_lock">空间不足，将清理加锁视频</string>
    <string name="hint_storage_full_cause_by_other">空间不足，请清理录像卡</string>
    <string name="hint_record_start">开始录像</string>
    <string name="hint_record_stop">停止录像</string>
    <string name="hint_enable_back_in_engineer_mode">请在工程模式激活后录</string>
    <string name="hint_not_record">未录像</string>
    <string name="default_record_time">00 : 00</string>
    <string name="default_latitude_longitude">LAT:123.123456   LNG:12.123456</string>
    <string name="short_record">REC</string>
    <string name="hint_save_video_error">视频保存失败</string>
    <string name="hint_save_photo_error">图片保存失败</string>
    <string name="hint_going_shutdown">停止录像</string>

    <!-- UncaughtExceptionHandler -->
    <string name="app_has_exception">很抱歉录像异常，即将退出</string>

    <!-- Icon + Text -->
    <string name="icon_hint_5_minutes">5分钟</string>
    <string name="icon_hint_3_minutes">3分钟</string>
    <string name="icon_hint_1_minute">1分钟</string>
    <string name="icon_hint_1080p">1080P</string>
    <string name="icon_hint_720p">720P</string>
    <string name="icon_hint_unlock">未锁</string>
    <string name="icon_hint_lock">已锁</string>
    <string name="icon_hint_mute">静音</string>
    <string name="icon_hint_unmute">录音</string>
    <string name="icon_hint_switch">切换</string>
    <string name="icon_hint_exit">退出</string>

    <!-- FlashCleanDialog -->
    <string name="dialog_flash_clean_title">提示</string>
    <string name="dialog_flash_clean_content">本机存储可用空间低于300 MB，请前去清理！</string>
    <string name="dialog_flash_clean_confirm">确定</string>
    <string name="dialog_flash_clean_cancel">取消</string>

    <!-- SD free storage is too low -->
    <string name="sd_storage_too_low">录像卡需要清理</string>

    <!-- BackRecord Enable -->
    <string name="hint_enable_record_back">开启后录会影响SD卡使用寿命，继续开启吗?</string>
    <string name="enable_cancel">暂不开启</string>
    <string name="enable_confirm">仍然开启</string>
    <string name="no_cvbs_detect">请先插入后拉摄像头！</string>

    <!-- ADAS -->
    <string name="adas_setting_title">ADAS设置</string>
    <string name="adas_title_auth_state">ADAS授权状态 </string>
    <string name="adas_title_line">车道偏离预警</string>
    <string name="adas_title_vehicle">前车碰撞预警</string>
    <string name="adas_title_sensity">预警灵敏度</string>
    <string name="adas_sensity_low">低</string>
    <string name="adas_sensity_middle">中</string>
    <string name="adas_sensity_high">高</string>
    <string name="adas_title_min_speed">预警门限</string>
    <string name="adas_speed_0">不限</string>
    <string name="adas_speed_20">20</string>
    <string name="adas_speed_50">50</string>
    <string name="adas_speed_80">80</string>
    <string name="adas_speed_unit">（Km/h）</string>
    <string name="adas_title_sound">声音提示</string>
    <string name="adas_angle_adjust">摄像头角度调整辅助线</string>
    <string name="adas_indoor_debug">室内调试</string>
    <string name="adas_indoor_debug_hint">（固定速度 80Km/h）</string>
    <string name="adas_verify_ok">授权成功</string>
    <string name="adas_verify_fail_not_auth">授权失败，设备未授权</string>
    <string name="adas_verify_fail_out_of_number">授权失败，授权数已用完</string>
    <string name="adas_verify_fail_server_error">授权失败，服务器异常</string>
    <string name="adas_already_auth_restore">设备已授权，请恢复</string>
    <string name="adas_restore_fail_no_item">授权恢复失败，未找到授权记录</string>
    <string name="adas_restore_fail_too_frequency">恢复授权失败，恢复过频繁</string>
    <string name="adas_verify_fail_check_network">网络错误</string>
    
    <!-- BackLine -->
    <string name="back_line_red">STOP</string>
    <string name="back_line_yellow">3m</string>
    <string name="back_line_green">5m</string>

</resources>